# pyjiff

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/actions/: test.yml
.github/workflows/: release.yml  test.yml
docs/: conf.py  index.rst  jiff.rst
misc/: local_cibuildwheel.sh
python/jiff/: __init__.py
src/: lib.rs  pyspan.rs  pytimestamp.rs  pytimezone.rs  pyzoned.rs
tests/: test_benchmarks.py  test_span.py  test_timestamp.py  test_zoned.py
