[project]
name = "jiff"
version = "0.1.0"
description = "Python bindings to the Jiff datetime library"
authors = [
    { name = "Tyler Kennedy", email = "tk@tkte.ch" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"
license = "MIT"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = [
    "pip>=24.1.2",
    "pytest>=8.3.1",
]

[tool.maturin]
python-source = "python"
module-name = "jiff._lowlevel"
features = ["pyo3/extension-module"]

[tool.cibuildwheel]
skip = ["*-musllinux_i686"]