[project]
name = "jiff"
version = "0.2.0"
description = "Python bindings to the Jiff datetime library"
authors = [
    { name = "Tyler Kennedy", email = "tk@tkte.ch" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.10"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/tktech/pyjiff"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = [
    "pip>=24.1.2",
    "pytest>=8.3.1",
    "sphinx>=7.4.7",
    "furo>=2024.7.18",
]

[tool.maturin]
python-source = "python"
module-name = "jiff._lowlevel"
features = ["pyo3/extension-module"]

[tool.cibuildwheel]
skip = ["*-musllinux_i686"]
